--- a/Data_visualization/3.2-Adding_elements.qmd
+++ b/Data_visualization/3.2-Adding_elements.qmd
@@ -27,6 +27,9 @@ library(cowplot)
 ggplot2::theme_set(theme_cowplot())
 library(paletteer)
 library(lubridate)
+library(png)
+library(ggpubr)
+library(ggmap)
 
 library(Data4Ecologists)
 library(abdData)
@@ -34,11 +37,19 @@ library(abdData)
 
 Adding elements to plots
 
-- Lines, boxes
-- Shading areas
-- Images
-- Text
-- Math text
+- Lines
+- Boxes, shading plot areas
+- Images (jpg, png)
+- Maps
+- Text and math text
+
+
+## `annotate()`
+
+- Adds elements without using `geom_`
+- Doesn't require `data.frames` or `tibbles`
+- Useful for single elements
+
 
 ## Boxes and shading
 
@@ -113,10 +124,175 @@ ggplot() +
         strip.background = element_rect(fill = "goldenrod"))
 ```
 
+
 ## Overlaying data on Images
 
+- Loading image
+- Setting up coordinates with `tribble()`
 
-## Text annotation / 
+```{r}
+#| echo: true
+img <- png::readPNG("Images/Craniometric_tracing.png")
+
+coords <- tibble::tribble(
+  ~ LM, ~ x, ~ y,
+  "ANS", 318, 249,
+  "Articulare", 44, 193,
+  "Basion", 7, 221,
+  "Condylion", 59, 169,
+  "Gonion", 73.5, 332,
+  "Menton", 215, 415,
+  "Nasion", 313, 96,
+  "PNS", 153, 241,
+  "Pogonion", 239, 424,
+  "Sella", 79, 116
+) |> 
+  mutate(y = dim(img)[1] - y) # Reverse due to R/ImageJ differences
+```
 
 
-## Latex axis labels
+## Images are matrices (grayscale) or arrays (color)
+
+```{r}
+#| echo: true
+class(img)
+str(img)
+img[1:10, 1:10]
+```
+
+
+## plot with `annotation_raster()`
+
+- `xmin`, `xmax`, `ymin`, and `ymax` define the box for the image
+- `dim(img)` gives the dimensions of the matrix
+- Use `ggpubr::theme_transparent()` to remove all plot axes, labels, etc.
+
+```{r}
+#| echo: true
+#| output-location: slide
+ggplot(data = coords, aes(x, y)) +
+    annotation_raster(img,
+                      xmin = 0, xmax = dim(img)[2],
+                      ymin = 0, ymax = dim(img)[1]) +
+    geom_point(color = "red", size = 5) +
+    xlim(c(0, dim(img)[2])) +
+    ylim(c(0, dim(img)[1])) +
+    coord_equal() +
+    theme(axis.text = element_blank(),
+          axis.ticks = element_blank(),
+          axis.title = element_blank()) +
+    ggpubr::theme_transparent()
+```
+
+## Maps
+
+Field sites along the Missouri River
+
+```{r}
+#| echo: true
+library(ggmap)
+
+Locations <- 
+  tribble(~ lat,     ~lon,       ~ ID,
+          38.666710, -91.867078, "Mokane",
+          38.587094, -92.176563, "Jefferson City",
+          38.688121, -92.363351, "Marion",
+          38.799781, -92.378246, "Easley",
+          38.974020, -92.565014, "Rocheport",
+          38.980450, -92.740881, "Boonville",
+          39.064000, -92.935129, "Arrow Rock",
+          39.232537, -92.848955, "Glasgow")
+```
+
+
+## Setup and plot map with data
+
+```{r}
+#| echo: true
+#| output-location: slide
+#| cache: true
+
+# Create bounding box for locations
+sbbox <- make_bbox(lon = Locations$lon,
+                   lat = Locations$lat,
+                   f = 0.25) # Expansion factor
+
+# Download map
+sq_map <- get_stamenmap(bbox = sbbox,
+                        maptype = "terrain")
+
+p <- ggmap(sq_map) + 
+  geom_point(data = Locations,
+             mapping = aes(x = lon, y = lat),
+             color = "red",
+             size = 3) +
+  labs(x = "Longitude", y = "Latitude")
+p
+```
+
+
+## Text annotations
+
+```{r}
+#| echo: true
+#| output-location: slide
+p +
+  annotate(geom = "text",
+           x = -92.45,
+           y = 39.35,
+           label = "Field Sites on the Missouri River",
+           size = 8)
+```
+
+
+## Labeling points with `ggrepel` package
+
+```{r}
+#| echo: true
+#| output-location: slide
+#| warning: false
+library(ggrepel)
+
+p +
+  annotate(geom = "text",
+           x = -92.45,
+           y = 39.35,
+           label = "Field Sites on the Missouri River",
+           size = 8) +
+  geom_text_repel(data = Locations,
+                  mapping = aes(x = lon, y = lat, label = ID),
+                  box.padding = 1,
+                  seed = 431579)
+```
+
+
+## Working with math
+
+Several options
+
+- `?plotmath` which uses `expression()` and `paste()`
+- `annotate()` with `parse = TRUE`
+- `latex2exp` [package](https://cran.r-project.org/web/packages/latex2exp/vignettes/using-latex2exp.html) converts LaTeX expressions to plotmath
+
+
+## Regression data
+
+```{r}
+set.seed(43577)
+M <- tibble(
+  x = runif(20, 0, 10),
+  y = x * 4 + rnorm(20, 0, 2)
+)
+M
+```
+
+
+## Plotting with units
+
+```{r}
+#| echo: true
+#| output-location: slide
+ggplot(M, aes(x, y)) +
+  geom_point()
+```
+
