--- a/Data_visualization/3.4-Reusable_themes.qmd
+++ b/Data_visualization/3.4-Reusable_themes.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Reusable themes"
+title: "Creating reusable themes"
 author:
   - Elizabeth King
   - Kevin Middleton
@@ -119,6 +119,7 @@ ggplot(Trunks, aes(x = Species, y = TF, color = Species)) +
   guides(color = "none") +
   theme(axis.text.x = element_text(face = "italic"))
 ```
+
 
 ## Reuse your theme
 
