--- a/Data_visualization/3.3-Highlighting.qmd
+++ b/Data_visualization/3.3-Highlighting.qmd
@@ -28,6 +28,7 @@ ggplot2::theme_set(theme_cowplot())
 library(ggforce)
 library(ggrepel)
 library(paletteer)
+library(concaveman)
 
 library(Data4Ecologists)
 library(abdData)
