--- a/Data_visualization/2.3-Theming.qmd
+++ b/Data_visualization/2.3-Theming.qmd
@@ -310,7 +310,7 @@ ggplot(EF, aes(x = n_Upstream,
   theme(legend.title = element_text(size = 10),
         legend.text = element_text(size = 9),
         legend.position = c(0.35, 0.175),
-        legend.box.background = element_rect(color = "black", size = 1),
+        legend.box.background = element_rect(color = "black", linewidth = 1),
         legend.box.margin = margin(4, 4, 4, 4),
         axis.title = element_text(face = "bold"))
 ```
