--- a/Data_visualization/5.1-Finishing_touches.qmd
+++ b/Data_visualization/5.1-Finishing_touches.qmd
@@ -45,7 +45,7 @@ library(patchwork)
 
 *Presentations*:
 
-- Don't present talks or posters with microtext.
+- Don't give talks or present posters with microtext.
 
 
 ## Manuscripts
