--- a/Data_visualization/4.4-Processing_lists.qmd
+++ b/Data_visualization/4.4-Processing_lists.qmd
@@ -135,6 +135,8 @@ plots <- map(.x = 1:length(LL),
 wrap_plots(plots)
 ```
 
+`pluck(LL, ii, "p")` would also work here.
+
 
 ## Generate a report with each trait
 
